--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="row-fluid">
                 <div class="span12">
                     <h1>Social Data Collection & Analysis Tools</h1>
-                    
+                    <p><strong>(If you receive an error message that reads <em>"DataTables warning...."</em> just click "okay" and refresh the page on repeat until it works. It's a bug. Hooray bugs.)</strong></p>
                 </div>
             </div>
             <div class="row-fluid">
